fix(homepage): wrap heading in section

--- a/docs/stylesheets/index.css
+++ b/docs/stylesheets/index.css
@@ -6,23 +6,27 @@
 
 .md-typeset {
 
-  .headerlink, .md-content__button {
+  .md-content__button {
     display: none;
-  }
-
-  h1 {
-    text-align: center;
-    font-size: 3em;
-    font-family: 'Lexend Deca', sans-serif;
-    font-weight: 500;
-    text-transform: lowercase;
-    margin-bottom: 0;
   }
 
   section {
     width: fit-content;
     max-width: 100%;
     margin-inline: auto;
+
+    h1 {
+      text-align: center;
+      font-size: 3em;
+      font-family: 'Lexend Deca', sans-serif;
+      font-weight: 500;
+      text-transform: lowercase;
+      margin-bottom: 0;
+
+      .headerlink {
+        display: none;
+      }
+    }
 
     > p:has(.md-button) {
       display: flex;
